[gd_scene load_steps=3 format=3 uid="uid://cvfe6h81w5ifj"]

[ext_resource type="Script" path="res://Scripts/options_menu.gd" id="1_4sm4e"]

[sub_resource type="CanvasTexture" id="CanvasTexture_u3rw6"]

[node name="OptionsMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_4sm4e")

[node name="Options_background" type="TextureRect" parent="."]
modulate = Color(0.380392, 0.172549, 0.215686, 1)
layout_mode = 0
offset_right = 802.0
offset_bottom = 1373.0
texture = SubResource("CanvasTexture_u3rw6")

[node name="Options_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 252.0
offset_top = 93.0
offset_right = 443.0
offset_bottom = 162.0
theme_override_font_sizes/font_size = 50
text = "Options"

[node name="Instructions_Label" type="Label" parent="."]
layout_mode = 0
offset_left = 227.0
offset_top = 205.0
offset_right = 456.0
offset_bottom = 260.0
theme_override_font_sizes/font_size = 40
text = "Instructions"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 137.0
offset_top = 290.0
offset_right = 558.0
offset_bottom = 699.0
theme_override_font_sizes/normal_font_size = 40
text = "1. Something

2. Something

3. Something"

[node name="Back_Button" type="Button" parent="."]
layout_mode = 0
offset_left = 55.0
offset_top = 44.0
offset_right = 132.0
offset_bottom = 94.0
theme_override_font_sizes/font_size = 30
text = "Back"

[node name="HighScoreContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 107.0
offset_top = 701.0
offset_right = 337.0
offset_bottom = 756.0

[node name="HighScoreLabel" type="Label" parent="HighScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40
text = "High Score: "

[node name="HighScoreValue" type="Label" parent="HighScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 40

[connection signal="pressed" from="Back_Button" to="." method="_on_back_button_pressed"]
